objects/OAH_Task__c.object
<CustomObject>
    <label>OAH Task</label>
    <nameField>
        <displayFormat>Task{YYYY}-{0000}</displayFormat>
        <label>OAH Task ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OAH Tasks</pluralLabel>
    <sharingModel>Private</sharingModel>
    <fields>
        <fullName>From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OAH_Tasks1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Waiting on Someone Else</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                    <label>Normal</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OAH_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OAH Event</label>
        <referenceTo>OAH_Event__c</referenceTo>
        <relationshipLabel>OAH Tasks</relationshipLabel>
        <relationshipName>OAH_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OAH_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OAH Order</label>
        <referenceTo>OAH_Order__c</referenceTo>
        <relationshipLabel>OAH Tasks</relationshipLabel>
        <relationshipName>OAH_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task_Name__c</fullName>
        <label>Task Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>User.Division</field>
                <operation>equals</operation>
                <value>OAH</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>OAH_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OAH_Case_Name__c</fullName>
        <formula>OAH_Case_Number__r.Case_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OAH Case Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Record_ID__c</fullName>
        <label>Old Record ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_to_Me__c</fullName>
        <formula>IF (Assigned_To__c = $User.Id, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned_to_Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delegated_by_me__c</fullName>
        <formula>IF(From__c = $User.Id , True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delegated_by_me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OAH_Case_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OAH Case</label>
        <referenceTo>OAH_Case_List__c</referenceTo>
        <relationshipLabel>OAH Tasks</relationshipLabel>
        <relationshipName>OAH_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notify_Sender_of_Completion__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Notify Sender of Completion</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>My_Tasks</fullName>
        <columns>NAME</columns>
        <columns>Task_Name__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>From__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Assigned_to_Me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>Assigned to Me and Active</label>
    </listViews>
    <listViews>
        <fullName>All_Tasks</fullName>
        <columns>NAME</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>From__c</columns>
        <columns>OAH_Case_Number__c</columns>
        <columns>OAH_Case_Name__c</columns>
        <columns>Task_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Tasks</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Tasks</fullName>
        <columns>NAME</columns>
        <columns>OAH_Case_Number__c</columns>
        <columns>OAH_Case_Name__c</columns>
        <columns>Task_Name__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>From__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Deferred</value>
        </filters>
        <label>All Open Tasks</label>
    </listViews>
    <listViews>
        <fullName>Delegated_by_Me</fullName>
        <columns>NAME</columns>
        <columns>Task_Name__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Delegated_by_me__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Delegated by Me</label>
    </listViews>
    <listViews>
        <fullName>My_Completed_Tasks</fullName>
        <columns>NAME</columns>
        <columns>Task_Name__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>Due_Date__c</columns>
        <columns>From__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>My Completed Tasks</label>
    </listViews>
    <sharingReasons>
        <fullName>Share_Task_with_Creator__c</fullName>
        <label>Share Task with Creator</label>
    </sharingReasons>
</CustomObject>